made the add candidate work

--- a/public/voter/css/vote.css
+++ b/public/voter/css/vote.css
@@ -68,7 +68,7 @@
 
 #ballot-senator {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 .ballot-senator label {
   width: 48%;
